--- a/CSK1.HTML
+++ b/CSK1.HTML
@@ -19,4 +19,4 @@ The Super Kings are the joint-most successful IPL franchise, along with Mumbai I
 
 The Super Kings were suspended for two years from the IPL from July 2015 to 2017 due to the involvement of its owners in the 2013 IPL spot-fixing and betting case. The franchise re-joined the tournament for the 2018 season and won the title in its comeback season. In January 2022, CSK became India's first unicorn sports enterprise. As of 2022, it was the second most valuable IPL franchise with a valuation of $1.15 billion.</p>
 <iframe width="1310" height="815" src="https://www.youtube.com/embed/NTHc6_NMj_Y?si=eap9skmgBYNp6Enl" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-<a href="RCB1.html">NEXT</a><br><a href="SRH1.HTML">BACK</a><br><a href="index.html">HOME</a>
+<a href="RCB1.HTML">NEXT</a><br><a href="SRH1.HTML">BACK</a><br><a href="index.html">HOME</a>
