--- a/KKR1.HTML
+++ b/KKR1.HTML
@@ -18,4 +18,4 @@ KKR has won the IPL championship twice, in 2012 and 2014, under the captaincy of
 KKR has a dedicated fan base, often referred to as the "Knight Riders," and is
 known for its vibrant team colors of purple and gold. The team has also been involved in various charitable initiatives and community outreach programs.</p>
 <iframe width="1310" height="815" src="https://www.youtube.com/embed/RyiRvtBJLdQ?si=3N4orAyzLGxu7SFP" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-<a href="MI1.html">BACK</a><br><a href="index.html">HOME</a>
+<a href="MI1.HTML">BACK</a><br><a href="index.html">HOME</a>
