--- a/MI1.HTML
+++ b/MI1.HTML
@@ -18,4 +18,4 @@ MI is the most successful team in the IPL, having won the championship a record 
 MI has a passionate fan base, often referred to as the "MI Army," and is known
 for its vibrant team colors of blue and gold. The team has also been involved in various charitable initiatives and community outreach programs.</p>
 <iframe width="1310" height="815" src="https://www.youtube.com/embed/4pJPj_fkQhc?si=Ycem5W28GRNWHE0K" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-<a href="KKR1.html">NEXT</a><br><a href="RCB1.HTML">BACK</a><br><a href="index.html">HOME</a>
+<a href="KKR1.HTML">NEXT</a><br><a href="RCB1.HTML">BACK</a><br><a href="index.html">HOME</a>
